[workspace]
members = ["proto", "remote", "sqlite"]
resolver = "2"

[workspace.package]
license = "MIT"
repository = "https://github.com/denoland/denokv"
authors = ["the Deno authors"]
edition = "2021"

[workspace.dependencies]
denokv_proto = { version = "0.2.0", path = "./proto" }

anyhow = "1"
async-trait = "0.1"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }
futures = "0.3.28"
log = "0.4.20"
num-bigint = "0.4"
prost = "0.11"
prost-build = "0.11"
rand = "0.8.5"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
rusqlite = { version = "0.29.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
url = "2"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
