[workspace]
members = ["denokv", "proto", "remote", "sqlite", "timemachine"]
resolver = "2"

[workspace.package]
license = "MIT"
repository = "https://github.com/denoland/denokv"
authors = ["the Deno authors"]
edition = "2021"

[workspace.dependencies]
denokv_proto = { version = "0.6.1", path = "./proto" }
denokv_sqlite = { version = "0.6.1", path = "./sqlite" }
denokv_remote = { version = "0.6.1", path = "./remote" }
denokv_timemachine = { version = "0.6.1", path = "./timemachine" }

anyhow = "1"
async-stream = "0.3"
async-trait = "0.1"
aws-config = "0.55.3"
aws-sdk-s3 = "0.28.0"
aws-smithy-async = "0.55.3"
aws-smithy-client = "0.55.3"
aws-smithy-types = "0.55.3"
axum = { version = "0.6", features = ["macros", "http2"] }
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }
clap = { version = "4", features = ["derive", "env"] }
constant_time_eq = "0.3"
env_logger = "0.10.0"
futures = "0.3.28"
hex = "0.4"
hyper = { version = "0.14", features = ["client"] }
hyper-proxy = "0.9.1"
log = "0.4.20"
num-bigint = "0.4"
prost = "0.11"
prost-build = "0.11"
rand = "0.8.5"
reqwest = { version = "0.11", default-features = false, features = ["json", "stream"] }
rusqlite = "0.29.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.107"
tempfile = "3"
thiserror = "1"
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = "0.7"
url = "2"
uuid = { version = "1.4.1", features = ["v4", "serde"] }