[package]
name = "denokv_proto"
description = "Fundamental types, traits, and protobuf models for denokv"
version = "0.10.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
path = "lib.rs"

[features]
build_protos = ["prost-build"]

[dependencies]
async-trait.workspace = true
chrono.workspace = true
futures.workspace = true
num-bigint.workspace = true
prost.workspace = true
serde.workspace = true
uuid.workspace = true
deno_error.workspace = true

[build-dependencies]
prost-build = { workspace = true, optional = true }
