[package]
name = "denokv_remote"
description = "Remote (KV Connect) backend for Deno KV"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
path = "lib.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
denokv_proto.workspace = true
futures.workspace = true
log.workspace = true
num-bigint.workspace = true
rand.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
url.workspace = true
reqwest.workspace = true
serde.workspace = true
prost.workspace = true
bytes.workspace = true
