[package]
name = "denokv_remote"
description = "Remote (KV Connect) backend for Deno KV"
version = "0.11.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
path = "lib.rs"

[dependencies]
async-stream.workspace = true
async-trait.workspace = true
bytes.workspace = true
chrono.workspace = true
denokv_proto.workspace = true
futures.workspace = true
http.workspace = true
log.workspace = true
prost.workspace = true
rand.workspace = true
serde_json.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-util.workspace = true
url.workspace = true
uuid.workspace = true
thiserror.workspace = true
deno_error.workspace = true

[dev-dependencies]
reqwest.workspace = true
