[package]
name = "deno_kv_sqlite"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
path = "lib.rs"

[features]
default = ["bundled"]
bundled = ["rusqlite/bundled"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
deno_kv_proto = { path = "../proto" }
futures.workspace = true
log.workspace = true
num-bigint.workspace = true
rand.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
