[package]
name = "denokv_sqlite"
description = "SQLite storage backend for Deno KV"
version = "0.9.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
path = "lib.rs"

[dependencies]
async-stream.workspace = true
async-trait.workspace = true
chrono.workspace = true
denokv_proto.workspace = true
futures.workspace = true
hex.workspace = true
log.workspace = true
num-bigint.workspace = true
rand.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
v8_valueserializer.workspace = true
tokio-stream.workspace = true
deno_error.workspace = true