[package]
name = "denokv_timemachine"
description = "Point-in-time recovery tool for Deno KV"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
aws-sdk-s3.workspace = true
chrono.workspace = true
denokv_proto.workspace = true
futures.workspace = true
hex.workspace = true
prost.workspace = true
rusqlite.workspace = true
tokio.workspace = true
