[workspace]

[package]
authors = []
edition = "2021"
name    = "deno-kv-napi"
version = "0.0.0" # never published

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = {version="2", features=["async","anyhow"]}
napi-derive = "2"
denokv_sqlite = "0.4.0"
denokv_proto = "0.4.0"
rand = "0.8.5"
rand_distr = "0.3.0"
tokio = { version = "1.33.0", features = ["full"] }
anyhow = "1"
prost = "0.11"
once_cell = "1.18.0"
rusqlite = "0.29.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
