[workspace]

[package]
authors = []
edition = "2021"
name = "deno-kv-napi"
version = "0.0.0"     # never published

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.28"
napi = { version = "2", features = ["async", "anyhow"] }
napi-derive = "2"
denokv_sqlite = { path = "../../sqlite" }
denokv_proto = { path = "../../proto" }
rand = "0.8.5"
rand_distr = "0.3.0"
tokio = { version = "1.33.0", features = ["full"] }
anyhow = "1"
prost = "0.13"
once_cell = "1.18.0"
rusqlite = { version = "0.32.0", features = ["bundled"] }
deno_error = "0.5.3"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
